--- a/TelegramNews/Views/_ViewImports.cshtml
+++ b/TelegramNews/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TelegramNews
-@using TelegramNews.Models
+﻿@using TelegramNews.ViewModels
+@using TelegramNews.Database.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
