Added simple work with Telegram API: - Display text messages from Telegram channel

--- a/TelegramNews/Views/Home/Index.cshtml
+++ b/TelegramNews/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewBag.Title = "Home";
 }
 
+<div>
+    <a asp-action="ConnectToTelegram">Connect to Telegram</a>
+</div>
+
 @section footer{
     <div> This is the Index footer</div>
 }
