--- a/TelegramNews/Views/Account/Register.cshtml
+++ b/TelegramNews/Views/Account/Register.cshtml
@@ -14,6 +14,12 @@
     </div>
 
     <div>
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" />
+        <span asp-validation-for="PhoneNumber"></span>
+    </div>
+
+    <div>
         <label asp-for="Password"></label>
         <input asp-for="Password" />
         <span asp-validation-for="Password"></span>
