--- a/TelegramNews/Views/Account/Login.cshtml
+++ b/TelegramNews/Views/Account/Login.cshtml
@@ -1,25 +1,30 @@
 ﻿@model LoginViewModel
 
-@{ViewBag.Title = "Login";}
+@{ViewBag.Title = "Sign In";}
 
-<h2> Login </h2>
+@section Styles {
+    <link href="@Url.Content("~/styles.css")" rel="stylesheet" type="text/css"/>
+}
 
-<form method="post" asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl">
-    <div asp-validation-summary="ModelOnly"></div>
+<div class="text-center div-center-height-small">
+    <h2> Sign In </h2>
+    <form method="post" asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" class="form-signin">
+        <div asp-validation-summary="ModelOnly"></div>
 
-    <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
-        <span asp-validation-for="Username"></span>
-    </div>
+        <div>
+            <label asp-for="Username"></label>
+            <input asp-for="Username" class="form-control"/>
+            <span asp-validation-for="Username"></span>
+        </div>
 
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
+        <div>
+            <label asp-for="Password"></label>
+            <input asp-for="Password" class="form-control"/>
+            <span asp-validation-for="Password"></span>
+        </div>
 
-    <div>
-        <input type="submit" value="Login" />
-    </div>
-</form>
+        <div>
+            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign In" />
+        </div>
+    </form>
+</div>
