--- a/TelegramNews/Views/Account/Register.cshtml
+++ b/TelegramNews/Views/Account/Register.cshtml
@@ -1,37 +1,42 @@
 ﻿@model RegisterViewModel
 
-@{ ViewBag.Title = "Register"; }
+@{ ViewBag.Title = "Sign Up"; }
 
-<h1>Register</h1>
+@section Styles {
+    <link href="@Url.Content("~/styles.css")" rel="stylesheet" type="text/css" />
+}
 
-<form method="post" asp-controller="Account" asp-action="Register">
-    <div asp-validation-summary="ModelOnly"></div>
+<div class="text-center div-center-height-high">
+    <h1>Sign Up</h1>
+    <form method="post" asp-controller="Account" asp-action="Register" class="form-signin">
+        <div asp-validation-summary="ModelOnly"></div>
 
-    <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
-        <span asp-validation-for="Username"></span>
-    </div>
+        <div>
+            <label asp-for="Username"></label>
+            <input asp-for="Username" class="form-control" />
+            <span asp-validation-for="Username"></span>
+        </div>
 
-    <div>
-        <label asp-for="PhoneNumber"></label>
-        <input asp-for="PhoneNumber" />
-        <span asp-validation-for="PhoneNumber"></span>
-    </div>
+        <div>
+            <label asp-for="PhoneNumber"></label>
+            <input asp-for="PhoneNumber" class="form-control" />
+            <span asp-validation-for="PhoneNumber"></span>
+        </div>
 
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
+        <div>
+            <label asp-for="Password"></label>
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password"></span>
+        </div>
 
-    <div>
-        <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" />
-        <span asp-validation-for="ConfirmPassword"></span>
-    </div>
+        <div>
+            <label asp-for="ConfirmPassword"></label>
+            <input asp-for="ConfirmPassword" class="form-control" />
+            <span asp-validation-for="ConfirmPassword"></span>
+        </div>
 
-    <div>
-        <input type="submit" value="Register" />
-    </div>
-</form>
+        <div>
+            <input class="btn btn-lg btn-success btn-block" type="submit" value="Sign Up" />
+        </div>
+    </form>
+</div>
