--- a/TelegramNews/Views/Home/TelegramAuthorizeUser.cshtml
+++ b/TelegramNews/Views/Home/TelegramAuthorizeUser.cshtml
@@ -2,18 +2,24 @@
 
 @{ViewBag.Title = "Telegram authorize";}
 
-<h2> Please enter your phone number in global format (+7). We sent code in your account. </h2>
+@section Styles {
+    <link href="@Url.Content("~/styles.css")" rel="stylesheet" type="text/css" />
+}
 
-<form method="post" asp-controller="Home" asp-action="TelegramAuthorizeUser">
-    <div asp-validation-summary="ModelOnly"></div>
+<div class="text-center div-center-height-small">
+    <h3> Please enter your phone number in global format (+7). We sent code in your account. </h3>
 
-    <div>
-        <label asp-for="PhoneNumber"></label>
-        <input asp-for="PhoneNumber" />
-        <span asp-validation-for="PhoneNumber"></span>
-    </div>
+    <form method="post" asp-controller="Home" asp-action="TelegramAuthorizeUser">
+        <div asp-validation-summary="ModelOnly" class="form-signin"></div>
 
-    <div>
-        <input type="submit" value="Send code" />
-    </div>
-</form>
+        <div>
+            <label asp-for="PhoneNumber"></label>
+            <input asp-for="PhoneNumber" class="form-control"/>
+            <span asp-validation-for="PhoneNumber"></span>
+        </div>
+
+        <div>
+            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Send code" />
+        </div>
+    </form>
+</div>
