--- a/TelegramNews/Views/Home/TelegramAuthorizeUser.cshtml
+++ b/TelegramNews/Views/Home/TelegramAuthorizeUser.cshtml
@@ -2,8 +2,8 @@
 
 @{ViewBag.Title = "Telegram authorize";}
 
-@section Styles {
-    <link href="@Url.Content("~/styles.css")" rel="stylesheet" type="text/css" />
+@section AccountStyles {
+    <link href="@Url.Content("~/accountStyles.css")" rel="stylesheet" type="text/css" />
 }
 
 <div class="text-center div-center-height-small">
