--- a/TelegramNews/Views/Account/Register.cshtml
+++ b/TelegramNews/Views/Account/Register.cshtml
@@ -2,8 +2,8 @@
 
 @{ ViewBag.Title = "Sign Up"; }
 
-@section Styles {
-    <link href="@Url.Content("~/styles.css")" rel="stylesheet" type="text/css" />
+@section AccountStyles {
+    <link href="@Url.Content("~/accountStyles.css")" rel="stylesheet" type="text/css" />
 }
 
 <div class="text-center div-center-height-high">
