--- a/TelegramNews/Views/Home/LoadFeed.cshtml
+++ b/TelegramNews/Views/Home/LoadFeed.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PostViewModel>
+﻿@model FeedViewModel
 
 @{
     ViewBag.Title = "Feed";
@@ -10,17 +10,65 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-3">
-            <a class="btn btn-lg btn-success" asp-action="AddTelegramChannel" role="button">Add Channel</a>
+        <div class="col-lg-3">
+            <h1 class="my-4">Channels list: </h1>
+            <div class="list-group">
+                <a href='@Url.Action("AddTelegramChannel", "Home")' class="list-group-item">Add new</a>
+                <a href='@Url.Action("LoadFeed", "Home")' class="list-group-item">All</a>
+                @foreach (var channel in Model.Channels)
+                {
+                    <a href='@Url.Action("LoadFeed", "Home", new { channelFilter = channel.ChannelName })' class="list-group-item">@channel.ChannelName</a>
+                }
+            </div>
         </div>
-        <div class="col-sm-6">
-            @foreach (var post in Model)
-            {
-                @Html.Partial("_Post", post);
-            }
-        </div>
-        <div class="col-sm-3">
+            <!-- /.col-lg-3 -->
+
+            <div class="col-lg-9">
+
+                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <div class="row">
+                    @foreach (var post in Model.Posts)
+                    {
+                        @Html.Partial("_Post", post);
+                    }
+
+                </div>
+                <!-- /.row -->
+
+            </div>
+            <!-- /.col-lg-9 -->
 
         </div>
-    </div>
+    <!-- /.row -->
+
 </div>
+
+@section Footer {
+    @await Html.PartialAsync("_Footer")
+}
